# strands-prospecting

./: .env.example  .gitignore  ARCHITECTURE_FLOW.md  ASSESSMENT.md  CLAUDE.md  CONVERSATION_FLOW.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  QUICK_START.md  README.md  STRANDS_ALIGNMENT_REVIEW.md  STRANDS_ALIGNMENT_SUMMARY.md  SUFFICIENCY_CHECKER_SUMMARY.md  pyproject.toml  test_e2e.py  test_executor_manual.py  test_integration.py  test_live_query.py  test_reporter_manual.py  test_sufficiency_manual.py
src/: approval_handler.py  cli.py  config.py  main.py  orchestrator.py  session.py
src/agents/: __init__.py  entity_extractor.py  executor.py  planner.py  reporter.py  sufficiency.py  summarizer.py
src/cli/: __init__.py  approval.py
src/mocks/data/companies_house/: companies.json  officers.json  profiles.json  pscs.json
src/mocks/data/crunchbase/: funding_rounds.json  organizations.json
src/mocks/data/dun_bradstreet/: companies.json
src/mocks/data/internal_crm/: clients.json
src/mocks/data/orbis/: companies.json  directors.json  ownership.json
src/mocks/data/pitchbook/: companies.json  deals.json
src/mocks/data/serpapi/: news.json
src/mocks/data/wealthx/: profiles.json
src/models/: __init__.py  approval.py  plan.py  prospect.py  results.py  shared.py  sufficiency.py
src/tools/: __init__.py  base.py  companies_house.py  crunchbase.py  dun_bradstreet.py  internal_crm.py  orbis.py  pitchbook.py  serpapi.py  wealth_monitor.py  wealthx.py
tests/: test_approval_models.py  test_models.py  test_planner.py
tests/test_tools/: test_all_tools.py
(+1 files in other folders)
